--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -25,6 +25,16 @@
                 width: 110px;
                 height: 45px;
         }
+
+        @media only screen and (max-width: 28.125em)
+        {
+                
+                font-size: 15px;
+                width: 100px;
+                height: 40px;
+                margin-left: 15px;
+                margin-right: 10px;
+        }
 }
 
 .btn--card
@@ -82,6 +92,13 @@
                 font-weight: 500;
                 letter-spacing: 1.2px;
         }
+
+        @media only screen and (max-width: 28.125em)
+        {
+                font-size: 28px;
+                font-weight: 400;
+                letter-spacing: 1.5px;
+        }
 }
 //#################################################################################################
 
@@ -98,9 +115,11 @@
         padding-right: 1.5%;
         // border: 2px solid red;
 
-        @media only screen and (max-width: 96.875em)
+        @media only screen and (max-width: 28.125em)
         {
-
+                flex-direction: column;
+                padding-left: 2.5%;
+                padding-right: 1.5%;
         }
 
 }
@@ -122,6 +141,13 @@
                 margin-bottom: 45px;
                 // height: auto;
                 width: 31%;
+        }
+
+        @media only screen and (max-width: 28.125em)
+        {
+                box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.15);
+                width: 91%;
+                padding: 16px;
         }
 
         &:hover
